--- a/indexl.html
+++ b/indexl.html
@@ -2,28 +2,63 @@
 <html>
 <head>
     <title>Activity 1: Basic HTML, Bio</title>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab|Yellowtail' rel='stylesheet' type='text/css'>
     <style>
+    *{
+        background-color: rgb(214, 209, 209);
+    }
+    p{
+        margin: 5px;
+        padding: 5px;
+    }
+    h1{
+        background-color: black;
+        margin: 0;
+        color: white;
+        text-align: center;
+
+    }
+    h3{
+        margin: 5px;
+        padding: 5px;
+    }
     img{
+        padding: 10px;
         height:200px;
         width:200px;
+    }
+    .left-side{
+        float:left;
+        width:60%;
+    }
+    .right-side{
+        float:right;
+        width:30%;
+    }
+    .contact-info{
+        margin: 20px;
     }
     </style>
 </head>
 <body>
     <h1>Student Bio</h1>
+    <div class="left-side">
     <h3>Eric Liu</h3>
-    <img src="https://pbs.twimg.com/profile_images/1281774103/EricLiu-1_400x400.jpg">
-    <p>I grew up in New Jersey.  I attended Duke University and studied biochemistry.  Afterwards, I became a Professional Poker Player
+        <img style=float:left src="https://pbs.twimg.com/profile_images/1281774103/EricLiu-1_400x400.jpg">
+        <p>I grew up in New Jersey.  I attended Duke University and studied biochemistry.  Afterwards, I became a Professional Poker Player
     and did that for the last 10 years.
     </p>
     <p>Currently I live in Calabasas, CA with my wife and two kids, Peyton (11) and Nikolai (2). I am on my way to becoming a competent Junior
         developer at UCLA Extentions Full Stack Boot Camp.
     </p>
+    </div>
+    <div class="contact-info right-side">
     <h3>Contact Info</h3>
     <ul>
         <li>Email: <a href="mailto:eric.liu85@gmail.com">eric.liu85@gmail.com</a></li>
         <li>Github: <a href="https://github.com/n0rthf4ce">n0rthf4ce</a></li>
         <li>Portfolio: <a href="#">coming soon!</a></li>
     </ul>
+    </div>
 </body>
 </html>
